2009-12-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_ui.php: fix bug that show SQL error message and don't
	show the actions for compound alerts.
	* include/functions_alerts.php: in function "get_alert_agent_module_actions"
	add the parameter compound for search compound actions.

2009-12-24  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor_common.php,
	godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager_editor_wmi.php,
	godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor_prediction.php: change the lines to
	test if the form is for policy use. And clean source code.

2009-12-24  Sancho Lerena <slerena@artica.es>

	* DEBIAN/postinst: Fixed some perms on postinstall.

	* pandora_console_install: Fixed some perms on postinstall.

	* pandora_console.spec: Removed one blank space :-))

2009-12-23  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_db.php: Fixed avg. calculation in custom reports. 

2009-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/planned_downtime.php: fixes bug in several fields of
	edit form downtime.
	Fixes: 2919938

2009-12-23  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: Updated build.

	* godmode/agentes/planned_downtime.php: Fixed bad render when downtime
	is running.

2009-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fix warning messages when pass only group as
	string or integer in the function "isAllGroups".
	* include/functions_reporting.php: fix ambiguous colummn in query in the
	function "get_group_stats".

2009-12-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_custom_graphs.php: fix the name of custom graphs in the
	config select box in widget.
	Fixes: 2918740

2009-12-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php, include/functions_db.php: fix alert message